# smol-utf8

./: .clang-format  CMakeLists.txt  README.md  utf8.c  utf8.h  utf8_test.c
